# horobi-transcript-utility

./: .gitignore  README.md  requirements.txt  run.py
chatgpt/: README.md  build_download_list.ps1  ensure_backup_on_disk.ps1  expand_backup_conversations.ps1  get_backup_conversations.ps1  get_latest_backup.ps1  pull_convo_contents.ps1  pull_convo_list.ps1  summarize_workspace.ps1
chatgpt-new/: README.md
chatgpt-new/actions/: Download conversations.ps1  Expand backup.ps1  Search conversations.ps1  Search mappings.ps1  Set API key.ps1
chatgpt/chatgpt-new/: main.ps1
chatgpt/inputs/: how-to.md
inputs/: how-to.md
related_history_grabber/: Cargo.toml
youtube/: README.md  filter.ps1  run.ps1
youtube/history_harmonizer/: Cargo.toml
youtube/history_harmonizer/src/: main.rs
youtube/related_history_filter/: Cargo.toml
youtube/related_history_filter/src/: main.rs
youtube/related_history_grabber/src/: main.rs
